# Blaze2Cap

./: .gitignore  =4.2.0  README.md  README_10CHANNEL_BLAZEPOSE.md  activate_venv.txt  blazeposecoordinatetest.py  extraction_log.txt  main.py  pyproject.toml  run_blazepose_10ch_nvidia.sh  run_blazepose_cpu.sh  run_blazepose_fast.sh  run_blazepose_nvidia.sh  run_blazepose_xvfb_nvidia.sh  test_egl_nvidia.py
Orientation/: calibration_params.npz  format.txt  parse_calibration.py
final_numpy_dataset/: dataset_map.json
main_all_keypoints/: README_extract_all_keypoints.md  extract_all_blazepose_keypoints.py
test/: Blaze2dscreenreadme.md  analyze_frame_differences.py  blazepose2dscreen.py  blazeposelocal6dreadme.md  compare_frame_counts.py  comprehensive_verification.py  conclusion.txt  final_dataset_preparation.py  verify_final_dataset.py  visualize_blazepose_local_6d.py  visualize_test.py
totalcapture_dataset/: analyze_bvh_structure.py  bvh_bone_structure.json  debug_bone_hierarchy.py  debug_frame1.py  download_and_extract.py  export_target_to_bvh.py  extract_all_blazepose_keypoints.py  extract_blazepose_10ch.py  extract_blazepose_10ch_gpu.py  fourtoten.py  make_gt_datain_ori.py  plot_bvh_skeleton.py  test_skeleton_reconstruction.py  visualize_target_npy.py
training_dataset_both_in_out/: coordinate_matched_screen_matched.py  gt_22_6_rootdelta_nosync.py  gt_22_6_unsynced.py  gt_fromcam_root_childparent.md  select_25_7_from_blazepose.py  sync_blazepose_gt.py  test_cam_6d_gt.py  test_gt_22_6_fromraw_blazepose.py
utils/: HELP.txt  README_pose_extraction.md  main.py  (+14 more)
(+88 files in other folders)
